# XAI-Interpretability

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml  reformat_code.sh  setup.py
src/custom_evaluation/: evaluate_protopnet.py
src/custom_evaluation/explainer_wrapper/: ProtoPNet.py  base.py
src/custom_evaluation/model_wrapper/: PIPNet.py  ProtoPNet.py  base.py
src/data/: config.py  dataloader.py  funny_birds.py  road_condition_monitoring.py  road_type_detection.py
src/evaluation/: run.py
src/evaluation/custom/: cve.py  protopnet.py
src/evaluation/explainer_wrapper/: GradCam.py  PIPNet.py  ProtoPNet.py  base.py  captum.py
src/evaluation/model_wrapper/: PIPNet.py  ProtoPNet.py  base.py  standard.py
src/evaluation/protocols/: __init__.py  accuracy.py  background_independence.py  controlled_synthetic_data_check.py  deletion_check.py  distractibility.py  preservation_check.py  single_deletion.py  target_sensitivity.py
src/models/: __init__.py  args.py  convnext.py  resnet.py  vgg.py
src/models/PIPNet/: README.md  pipnet.py  run.py  test_setp.py  train_baseline.py  train_setp.py  trainer.py
src/models/ProtoPNet/: README.md  model.py  push.py  receptive_field.py  train_and_test.py  trainer.py
src/models/features/: __init__.py  resnet_features.py  (+2 more)
src/render/: README.md  create_dataset.py  page.html  parts.json  render_interventions.py  server.js
src/scripts/: eval_all_models.py  extract_data_from_tensorboard.py  generate_funny_10.py
src/utils/: environment.py  file_operations.py  log.py
(+42 files in other folders)
