[tool.poetry]
name = "XAI"
package-mode = false
description = ""
authors = [
	"Ábel Portik <abel.portik@stud.ubbcluj.ro>",
	"Adél Bajcsi <adel.bajcsi@ubbcluj.ro>",
	"Annamária Szenkovits <annamaria.szenkovits@ubbcluj.ro>",
	"Zalán Bodó <zalan.bodo@ubbcluj.ro>",
]
readme = "README.md"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
albumentations = "^1.4.0"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
python-dotenv = "^1.0.1"
torch = { version = "^2.0.1+cu118", source = "torch" }
torchvision = { version = "^0.15.2+cu118", source = "torch" }
torchinfo = "^1.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8-pyproject = "^1.2.3"
flake8-bugbear = "^23.12.2"
isort = "^5.12.0"
pre-commit = "^3.4.0"

[tool.black]
line-length = 88

[tool.flake8]
ignore = ["E203", "E302", "E501", "E999", "W503"]
max-line-length = 88
max-complexity = 12
select = ["B", "C", "E", "F", "W", "B9"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
